vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_assign_return.vv
import v.embed_file

fn main() {
	'' == fn () string {
		x := $embed_file(@FILE).path
		return x
	}()
}
